@@ -15,6 +15,8 @@
 * Fixed a bug where plugin save would incorrectly be triggered on pressing
   command and then enter in Firefox.
 * fix template inheritance setting creates spurious migration (see #3479)
+* Fixed a bug which prevented the page from being marked as dirty (pending changes)
+  when changing the value of the overwrite url field.
 
 
 === 3.4.1 (2016-10-04) ===
